Creación de carpeta media y se añade tabla con audio y video

--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
             <!-- Formulario -->
         </section>
         <section>
-            <!-- Audio y Vídeo -->
+            <table border="1" align="center">
+                <tr>
+                    <td><audio src="media/Bruno Mars - The Lazy Song [OFFICIAL VIDEO].mp3" controls></audio></td>
+                </tr>
+                <tr>
+                    <td><iframe src="media/theLazySong.mp4" frameborder="0"></iframe></td>
+                </tr>
+            </table>
         </section>
     </main>
 </body>
