Ingreso el formulario

--- a/index.html
+++ b/index.html
@@ -14,7 +14,33 @@
     </header>
     <main>
         <section>
-            <!-- Formulario -->
+             <!-- Formulario -->
+            <form action="">
+                <input type="text" name="nombre" placeholder="Your names">
+                <br>
+                <br>
+                <input type="email" name="email" placeholder="E-mail">
+                <br>
+                <br>
+                <select name="documento" id="documento">
+                    <option value="">Type of document</option>
+                    <option value="cédula de ciudadanía">Cédula de ciudadanía</option>
+                    <option value="cédula de extranjería">Cédula de extranjería</option>
+                    <option value="Tarjeta de identidad">Tarjeta de identidad</option>
+                </select>
+                <br>
+                <br>
+                <input type="text" name="num_doc" placeholder="Document number">
+                <br>
+                <br>
+                <input type="date" name="fecha">
+                <br>
+                <br>
+                <input type="number" name="celular" placeholder="Cellphone">
+                <br>
+                <br>
+                <input type="number" name="teléfono" placeholder="Telephone">
+            </form>
         </section>
         <section>
             <!-- Audio y Vídeo -->
