--- a/index.html
+++ b/index.html
@@ -18,33 +18,44 @@
     <main>
         <section>
              <!-- Formulario -->
-            <form action="">
-                <input type="text" name="nombre" placeholder="Your names">
-                <br>
-                <br>
-                <input type="email" name="email" placeholder="E-mail">
-                <br>
-                <br>
-                <select name="documento" id="documento">
-                    <option value="">Type of document</option>
-                    <option value="cédula de ciudadanía">Cédula de ciudadanía</option>
-                    <option value="cédula de extranjería">Cédula de extranjería</option>
-                    <option value="Tarjeta de identidad">Tarjeta de identidad</option>
-                </select>
-                <br>
-                <br>
-                <input type="text" name="num_doc" placeholder="Document number">
-                <br>
-                <br>
-                <input type="date" name="fecha">
-                <br>
-                <br>
-                <input type="number" name="celular" placeholder="Cellphone">
-                <br>
-                <br>
-                <input type="number" name="teléfono" placeholder="Telephone">
-            </form>
+             <table align="center">
+                 <tr>
+                     <td> <form action="" align = "right">
+                        <input type="text" name="nombre" placeholder="Your names">
+                        <br>
+                        <br>
+                        <input type="email" name="email" placeholder="E-mail">
+                        <br>
+                        <br>
+                        <select name="documento" id="documento">
+                            <option value="">Type of document</option>
+                            <option value="cédula de ciudadanía">Cédula de ciudadanía</option>
+                            <option value="cédula de extranjería">Cédula de extranjería</option>
+                            <option value="Tarjeta de identidad">Tarjeta de identidad</option>
+                        </select>
+                        <br>
+                        <br>
+                        <input type="text" name="num_doc" placeholder="Document number">
+                        <br>
+                        <br>
+                        <input type="date" name="fecha">
+                        <br>
+                        <br>
+                        <input type="number" name="celular" placeholder="Cellphone">
+                        <br>
+                        <br>
+                        <input type="number" name="teléfono" placeholder="Telephone">
+                    </form></td>
+                     <td>
+
+                     </td>
+                 </tr>
+
+             </table>
+           
         </section>
+        <br>
+        <br>
         <section>
             <table border="1" align="center">
                 <tr>
