--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Exam 24/03/2021</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 </head>
-<body background="/media/Fondo.jfif">
+<body background="./media/Fondo.jpg">
     <header>
         <!-- Foto + Título -->
         <img src="./smart-fit-logo.png" alt="Logo Smartfit" title="Logo" width="100px">
