--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Exam 24/03/2021</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 </head>
-<body background="/media/Fondo.jfif">
+<body background="./media/Fondo.jfif">
     <header>
         <!-- Foto + Título -->
-        <img src="./smart-fit-logo.png" alt="Logo Smartfit" title="Logo" width="100px">
+        <img src="./descarga.png" alt="Logo Smartfit" title="Logo" width="100px">
         <h1>CREATE A USER <br> FOR CONTINUING</h1>
         <small>Or write your data for registering</small>
     </header>
