SmartFit fondo blanco

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <header>
             <!-- Foto + Título -->
-            <img src="./smart-fit-logo.png" alt="Logo Smartfit" title="Logo" width="100px">
+            <img src="./descarga.png" alt="Logo Smartfit" title="Logo" width="100px">
             <h1>CREATE A USER <br> FOR CONTINUING</h1>
             <small>Or write your data for registering</small>
         </header>
