Se suprime el aligin center de la tabla que contiene el form

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <td colspan="2">
                         <section>
                         <!-- Formulario -->
-                        <table align="center">
+                        <table>
                             <tr>
                                 <td> <form action="" align = "right">
                                    <input type="text" name="nombre" placeholder="Your names">
