--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                         <table>
                             <tr>
                                 <td> <form action="" align = "right">
-                                   <input type="text" name="nombre" placeholder="Your names">
+                                   <input type="text" name="nombre" placeholder="Your names" style="width: 300px; height: 30px;">
                                    <br>
                                    <br>
-                                   <input type="email" name="email" placeholder="E-mail">
+                                   <input type="email" name="email" placeholder="E-mail" style="height: 30px;">
                                    <br>
                                    <br>
-                                   <select name="documento" id="documento">
+                                   <select name="documento" id="documento" style="width: 300px; height: 30px;">
                                        <option value="">Type of document</option>
                                        <option value="cédula de ciudadanía">Cédula de ciudadanía</option>
                                        <option value="cédula de extranjería">Cédula de extranjería</option>
@@ -40,16 +40,16 @@
                                    </select>
                                    <br>
                                    <br>
-                                   <input type="text" name="num_doc" placeholder="Document number">
+                                   <input type="text" name="num_doc" placeholder="Document number" style="height: 30px;">
                                    <br>
                                    <br>
-                                   <input type="date" name="fecha" style="color: red;">
+                                   <input type="date" name="fecha" style="color: red;" style="width: 300px; height: 30px;">
                                    <br>
                                    <br>
-                                   <input type="number" name="celular" placeholder="Cellphone">
+                                   <input type="number" name="celular" placeholder="Cellphone" style="height: 30px;">
                                    <br>
                                    <br>
-                                   <input type="number" name="teléfono" placeholder="Telephone">
+                                   <input type="number" name="teléfono" placeholder="Telephone" style="height: 30px;">
                                </form></td>
                                 <td>
            
